--- a/index.html
+++ b/index.html
@@ -1,9 +1,75 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Jonathan Mateos webpage</title>
-  </head>
-  <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fiestas de Los Caleyos 2024</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ff6699;
+            color: black;
+            text-align: center;
+        }
+
+        h1, h2 {
+            margin-top: 20px;
+            font-size: 2.5em;
+        }
+
+        h3 {
+            margin-top: 10px;
+            font-size: 2em;
+        }
+
+        p {
+            font-size: 1.2em;
+            margin-bottom: 15px;
+        }
+
+        .eventos {
+            margin-top: 30px;
+            padding: 20px;
+            background-color: #ff99bb;
+            border-radius: 15px;
+            width: 90%;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        footer {
+            margin-top: 30px;
+            font-size: 1.2em;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Fiestas de Los Caleyos</h1>
+        <h2>Nuestra Señora de Covadonga</h2>
+    </header>
+
+    <section class="eventos">
+        <h3>Día 7 - Sábado</h3>
+        <p><strong>17:30h</strong> - Juegos Infantiles y Manualidades</p>
+        <p><strong>21:00h</strong> - Premio del Vecino Ejemplar</p>
+        <p><strong>21:30h</strong> - Gran Espicha y Concurso de Tartas</p>
+        <p><strong>23:00h</strong> - Verbena con DJ Cardeo</p>
+    </section>
+
+    <section class="eventos">
+        <h3>Día 8 - Domingo</h3>
+        <p><strong>11:30h</strong> - Pasacalles acompañado de Banda de Gaitas el Principado</p>
+        <p><strong>12:30h</strong> - Misa Solemne con salida de Ramo y Procesión. A continuación, sesión vermouth y subasta de Ramos amenizada por Gaiteros.</p>
+        <p><strong>17:30h</strong> - Hinchable Gratuito para Niños</p>
+        <p><strong>19:30h</strong> - Bingo</p>
+        <p><strong>22:30h</strong> - Verbena con Dúo Salados y DJ Cardeo</p>
+    </section>
+
+    <footer>
+        <p>Colabora con las fiestas del pueblo</p>
+    </footer>
+</body>
 </html>
