--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <header>
-        <h1>Fiestas de Los Caleyos</h1>
+        <h1>Fiestas de Los Caleyos 2024</h1>
         <h2>Nuestra Señora de Covadonga</h2>
     </header>
 
