--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 
         h1, h2 {
             margin-top: 20px;
+        }
+
+        h1 {
             font-size: 2.5em;
+        }
+
+        h2 {
+            font-size: 2em;
+            color: #333;
         }
 
         h3 {
@@ -47,20 +55,66 @@
             font-weight: 600;
             text-align: left;
             flex: 0 0 20%;
-            margin-left: 30px; /* Aumentamos el margen a la izquierda */
+            margin-left: 30px;
         }
 
         .descripcion {
             text-align: left;
             flex: 0 0 80%;
             margin-left: 10px;
-            margin-right: 30px; /* Añadimos más margen a la derecha */
+            margin-right: 30px;
         }
 
         footer {
             margin-top: 30px;
             font-size: 1.2em;
             color: #333;
+        }
+
+        /* Media queries para pantallas pequeñas */
+        @media (max-width: 768px) {
+            h1, h2 {
+                font-size: 2em;
+            }
+
+            h3 {
+                font-size: 1.5em;
+            }
+
+            .evento {
+                flex-direction: column;
+                align-items: flex-start;
+                font-size: 1em;
+            }
+
+            .hora {
+                margin-left: 0;
+                flex: none;
+            }
+
+            .descripcion {
+                margin-left: 0;
+                margin-right: 0;
+                flex: none;
+            }
+
+            .eventos {
+                padding: 15px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1, h2 {
+                font-size: 1.8em;
+            }
+
+            h3 {
+                font-size: 1.2em;
+            }
+
+            .evento {
+                font-size: 0.9em;
+            }
         }
     </style>
 </head>
