--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <h3>Día 8 - Domingo</h3>
         <div class="evento">
             <div class="hora">11:30h</div>
-            <div class="descripcion">Pasacalles acompañado de Banda de Gaitas el Principado</div>
+            <div class="descripcion">Pasacalles acompañado de Banda de Gaitas Principado</div>
         </div>
         <div class="evento">
             <div class="hora">12:30h</div>
