--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
     <section class="eventos">
         <h3>Día 7 - Sábado</h3>
         <div class="evento">
-            <div class="hora">17:30h</div>
+            <div class="hora">17:30</div>
             <div class="descripcion">Juegos Infantiles y Manualidades</div>
         </div>
         <div class="evento">
-            <div class="hora">21:00h</div>
+            <div class="hora">21:00</div>
             <div class="descripcion">Premio del Vecino Ejemplar</div>
         </div>
         <div class="evento">
-            <div class="hora">21:30h</div>
+            <div class="hora">21:30</div>
             <div class="descripcion">Gran Espicha y Concurso de Tartas</div>
         </div>
         <div class="evento">
-            <div class="hora">23:00h</div>
+            <div class="hora">23:00</div>
             <div class="descripcion">Verbena con DJ Cardeo</div>
         </div>
     </section>
@@ -147,23 +147,23 @@
     <section class="eventos">
         <h3>Día 8 - Domingo</h3>
         <div class="evento">
-            <div class="hora">11:30h</div>
+            <div class="hora">11:30</div>
             <div class="descripcion">Pasacalles acompañado de Banda de Gaitas Principado</div>
         </div>
         <div class="evento">
-            <div class="hora">12:30h</div>
+            <div class="hora">12:30</div>
             <div class="descripcion">Misa Solemne con salida de Ramo y Procesión. A continuación, sesión vermouth y subasta de Ramos amenizada por Gaiteros.</div>
         </div>
         <div class="evento">
-            <div class="hora">17:30h</div>
+            <div class="hora">17:30</div>
             <div class="descripcion">Hinchable Gratuito para Niños</div>
         </div>
         <div class="evento">
-            <div class="hora">19:30h</div>
+            <div class="hora">19:30</div>
             <div class="descripcion">Bingo</div>
         </div>
         <div class="evento">
-            <div class="hora">22:30h</div>
+            <div class="hora">22:30</div>
             <div class="descripcion">Verbena con Dúo Salados y DJ Cardeo</div>
         </div>
     </section>
