--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </header>
 
     <section class="eventos">
-        <h3>Día 7 - Sábado</h3>
+        <h3>Día 7 de septiembre - Sábado</h3>
         <div class="evento">
             <div class="hora">17:30</div>
             <div class="descripcion">Juegos Infantiles y Manualidades</div>
@@ -145,7 +145,7 @@
     </section>
 
     <section class="eventos">
-        <h3>Día 8 - Domingo</h3>
+        <h3>Día 8 de septiembre - Domingo</h3>
         <div class="evento">
             <div class="hora">11:30</div>
             <div class="descripcion">Pasacalles acompañado de Banda de Gaitas Principado</div>
