--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
             color: #333;
         }
 
+        footer a {
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
         /* Media queries para pantallas pequeñas */
         @media (max-width: 768px) {
             h1, h2 {
@@ -169,7 +179,7 @@
     </section>
 
     <footer>
-        <p>Colabora con las fiestas del pueblo</p>
+        <p><a href="https://www.facebook.com/groups/364046832989/permalink/10162054481312990/" target="_blank">Colabora con las fiestas del pueblo</a></p>
     </footer>
 </body>
 </html>
