--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
         <div class="evento">
             <div class="hora">22:30</div>
-            <div class="descripcion">Verbena con Dúo Salados y DJ Cardeo</div>
+            <div class="descripcion">Verbena con Dúo Capricho y DJ Cardeo</div>
         </div>
     </section>
 
