--- a/index.html
+++ b/index.html
@@ -1,185 +1,129 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fiestas de Los Caleyos 2024</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #ff6699;
-            color: black;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fiestas de Los Caleyos 2025</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #ffcc00;
+      color: black;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
 
-        h1, h2 {
-            margin-top: 20px;
-        }
+    header {
+      text-align: center;
+      padding: 20px;
+      background: #ff6699;
+      color: white;
+    }
 
-        h1 {
-            font-size: 2.5em;
-        }
+    h1 {
+      margin: 0;
+      font-size: 2em;
+    }
 
-        h2 {
-            font-size: 2em;
-            color: #333;
-        }
+    h2 {
+      margin: 5px 0 15px;
+      font-size: 1.2em;
+    }
 
-        h3 {
-            margin-top: 10px;
-            font-size: 2em;
-        }
+    .day {
+      background: white;
+      margin: 15px;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
 
-        .eventos {
-            margin-top: 30px;
-            padding: 20px;
-            background-color: #ff99bb;
-            border-radius: 15px;
-            width: 90%;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-        }
+    .day h3 {
+      margin: 0 0 10px;
+      color: #ff6699;
+      font-size: 1.2em;
+    }
 
-        .evento {
-            display: flex;
-            justify-content: flex-start;
-            margin-bottom: 10px;
-            font-size: 1.2em;
-        }
+    .event {
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 8px;
+    }
 
-        .hora {
-            font-weight: 600;
-            text-align: left;
-            flex: 0 0 20%;
-            margin-left: 30px;
-        }
+    .time {
+      font-weight: bold;
+      min-width: 60px;
+      margin-right: 10px;
+      text-align: left;
+    }
 
-        .descripcion {
-            text-align: left;
-            flex: 0 0 80%;
-            margin-left: 10px;
-            margin-right: 30px;
-        }
+    .description {
+      flex: 1;
+      margin-right: 15px;
+    }
 
-        footer {
-            margin-top: 30px;
-            font-size: 1.2em;
-            color: #333;
-        }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      background: #ff6699;
+      color: white;
+    }
 
-        footer a {
-            color: #333;
-            text-decoration: underline;
-            font-weight: bold;
-        }
+    footer a {
+      color: white;
+      text-decoration: underline;
+    }
 
-        footer a:hover {
-            text-decoration: none;
-        }
-
-        /* Media queries para pantallas pequeñas */
-        @media (max-width: 768px) {
-            h1, h2 {
-                font-size: 2em;
-            }
-
-            h3 {
-                font-size: 1.5em;
-            }
-
-            .evento {
-                flex-direction: column;
-                align-items: flex-start;
-                font-size: 1em;
-            }
-
-            .hora {
-                margin-left: 0;
-                flex: none;
-            }
-
-            .descripcion {
-                margin-left: 0;
-                margin-right: 0;
-                flex: none;
-            }
-
-            .eventos {
-                padding: 15px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1, h2 {
-                font-size: 1.8em;
-            }
-
-            h3 {
-                font-size: 1.2em;
-            }
-
-            .evento {
-                font-size: 0.9em;
-            }
-        }
-    </style>
+    /* Responsive */
+    @media (max-width: 600px) {
+      h1 { font-size: 1.5em; }
+      h2 { font-size: 1em; }
+      .day { margin: 10px; padding: 10px; }
+      .time { min-width: 50px; }
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Fiestas de Los Caleyos 2024</h1>
-        <h2>Nuestra Señora de Covadonga</h2>
-    </header>
+  <header>
+    <h1>Fiestas de Los Caleyos 2025</h1>
+    <h2>Nuestra Señora de Covadonga</h2>
+    <p>6, 7 y 8 de septiembre</p>
+  </header>
 
-    <section class="eventos">
-        <h3>Día 7 de septiembre - Sábado</h3>
-        <div class="evento">
-            <div class="hora">17:30</div>
-            <div class="descripcion">Juegos Infantiles y Manualidades</div>
-        </div>
-        <div class="evento">
-            <div class="hora">21:00</div>
-            <div class="descripcion">Premio del Vecino Ejemplar</div>
-        </div>
-        <div class="evento">
-            <div class="hora">21:30</div>
-            <div class="descripcion">Gran Espicha y Concurso de Tartas</div>
-        </div>
-        <div class="evento">
-            <div class="hora">23:00</div>
-            <div class="descripcion">Verbena con DJ Cardeo</div>
-        </div>
-    </section>
+  <main>
+    <div class="day">
+      <h3>Sábado 6 de septiembre</h3>
+      <div class="event"><div class="time">19:00</div><div class="description">Actuación del Grupo Folclórico <strong>La Tamarga</strong> y posterior taller a los vecinos</div></div>
+      <div class="event"><div class="time">21:00</div><div class="description">Rifa de cesta</div></div>
+    </div>
 
-    <section class="eventos">
-        <h3>Día 8 de septiembre - Domingo</h3>
-        <div class="evento">
-            <div class="hora">11:30</div>
-            <div class="descripcion">Pasacalles acompañado de Banda de Gaitas Principado</div>
-        </div>
-        <div class="evento">
-            <div class="hora">12:30</div>
-            <div class="descripcion">Misa Solemne con salida de Ramo y Procesión. A continuación, sesión vermouth y subasta de Ramos amenizada por Gaiteros.</div>
-        </div>
-        <div class="evento">
-            <div class="hora">17:30</div>
-            <div class="descripcion">Hinchable Gratuito para Niños</div>
-        </div>
-        <div class="evento">
-            <div class="hora">19:30</div>
-            <div class="descripcion">Bingo</div>
-        </div>
-        <div class="evento">
-            <div class="hora">22:30</div>
-            <div class="descripcion">Verbena con Dúo Capricho y DJ Cardeo</div>
-        </div>
-    </section>
+    <div class="day">
+      <h3>Domingo 7 de septiembre</h3>
+      <div class="event"><div class="time">18:00</div><div class="description">Gymkana infantil y juegos para los más pequeños</div></div>
+      <div class="event"><div class="time">21:30</div><div class="description">Gran espicha y concurso de tortillas</div></div>
+      <div class="event"><div class="time">23:00</div><div class="description">Verbena con <strong>DJ Cardeo</strong></div></div>
+    </div>
 
-    <footer>
-        <p><a href="https://www.facebook.com/groups/364046832989/permalink/10162054481312990/" target="_blank">Colabora con las fiestas del pueblo</a></p>
-    </footer>
+    <div class="day">
+      <h3>Lunes 8 de septiembre</h3>
+      <div class="event"><div class="time">11:30</div><div class="description">Pasacalles acompañado por el <strong>Grupo de Gaitas Principado</strong></div></div>
+      <div class="event"><div class="time">12:30</div><div class="description">Misa solemne con salida de Ramo y Procesión. A continuación sesión vermut y subasta de Ramo amenizada por gaiteros</div></div>
+      <div class="event"><div class="time">17:30</div><div class="description">Hinchable gratuito para los más pequeños</div></div>
+      <div class="event"><div class="time">19:30</div><div class="description">Bingo</div></div>
+      <div class="event"><div class="time">22:30</div><div class="description">Gran verbena con <strong>Dúo Roma</strong> y <strong>DJ Cardeo</strong></div></div>
+    </div>
+
+    <div class="day">
+      <p>Tras finalizar el primer pase de Dúo Roma se desvelarán los tres ganadores del concurso de tortillas y entrega de premios.</p>
+      <p>Tras la verbena, gran chocolatada seguida de la ruta hacia Loreto.</p>
+    </div>
+  </main>
+
+  <footer>
+    <p><a href="https://www.facebook.com/groups/364046832989/permalink/10162054481312990/" target="_blank"><u>Colabora con Los Caleyos</u></a></p>
+  </footer>
 </body>
 </html>
