--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Vista previa en redes sociales -->
 <meta property="og:title" content="Fiestas de Los Caleyos 2025">
 <meta property="og:description" content="Programa de las fiestas de Los Caleyos en honor a Nuestra Señora de Covadonga. 6, 7 y 8 de septiembre 2025.">
-<meta property="og:image" content="https://blonderfulapps.github.io/lc2025.jpg">
+<meta property="og:image" content="https://blonderfulapps.github.io/lc2025.png">
 <meta property="og:url" content="https://blonderfulapps.github.io/">
 <meta property="og:type" content="website">
 
@@ -12,7 +12,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Fiestas de Los Caleyos 2025">
 <meta name="twitter:description" content="Programa completo de las fiestas de Los Caleyos 2025.">
-<meta name="twitter:image" content="https://blonderfulapps.github.io/lc2025.jpg">
+<meta name="twitter:image" content="https://blonderfulapps.github.io/lc2025.png">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
